// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`static component snapshots Admin2FAModal setup mode: Admin2FAModal setup 1`] = `
<div
  class="fixed inset-0 z-[80] flex items-center justify-center p-4"
>
  <div
    class="absolute inset-0 bg-ink-950/90 backdrop-blur-sm"
  />
  <div
    class="relative w-full max-w-md rounded-2xl border border-market-500/20 bg-ink-900 p-6 shadow-2xl"
  >
    <h2
      class="font-display text-xl font-bold text-amber-100 mb-2"
    >
      Set up two-factor authentication
    </h2>
    <p
      class="text-sm text-amber-800 mb-4"
    >
      Scan the QR code with Google Authenticator (or similar), then enter the 6-digit code.
    </p>
    <button
      class="btn-primary w-full mb-4"
      type="button"
    >
      Generate QR code
    </button>
  </div>
</div>
`;

exports[`static component snapshots Admin2FAModal verify mode: Admin2FAModal verify 1`] = `
<div
  class="fixed inset-0 z-[80] flex items-center justify-center p-4"
>
  <div
    class="absolute inset-0 bg-ink-950/90 backdrop-blur-sm"
  />
  <div
    class="relative w-full max-w-md rounded-2xl border border-market-500/20 bg-ink-900 p-6 shadow-2xl"
  >
    <h2
      class="font-display text-xl font-bold text-amber-100 mb-2"
    >
      Admin 2FA required
    </h2>
    <p
      class="text-sm text-amber-800 mb-4"
    >
      Enter the 6-digit code from your authenticator app to continue.
    </p>
    <form
      class="space-y-4"
    >
      <input
        class="input w-full text-center text-lg tracking-widest font-mono"
        inputmode="numeric"
        maxlength="6"
        pattern="[0-9]{6}"
        placeholder="000000"
        required=""
        type="text"
        value=""
      />
      <button
        class="btn-primary w-full"
        disabled=""
        type="submit"
      >
        Verify
      </button>
    </form>
  </div>
</div>
`;

exports[`static component snapshots AppFooter default: AppFooter 1`] = `
<footer
  class="border-t border-market-500/10 dark:border-market-500/5 py-6 text-center"
>
  <p
    class="text-amber-900 dark:text-amber-800 text-sm font-body"
  >
    Open source · MIT License ·
     
    <button
      class="text-market-400 hover:text-market-300 underline underline-offset-2"
      type="button"
    >
      Shortcuts
    </button>
  </p>
</footer>
`;

exports[`static component snapshots ApplicationForm default: ApplicationForm 1`] = `
<div
  class="card animate-slide-up"
>
  <h3
    class="font-display text-lg font-bold text-amber-100 mb-1"
  >
    Submit Proposal
  </h3>
  <p
    class="text-amber-800 text-sm mb-6"
  >
    Client budget: 
    <span
      class="text-market-400 font-mono font-medium"
    >
      500 XLM
    </span>
  </p>
  <div
    class="mb-4 rounded-xl border border-market-500/20 bg-ink-900/40 p-3 text-xs text-amber-700"
  >
    Sealed-bid commitment phase: your amount stays hidden until reveal.
  </div>
  <div
    class="space-y-5"
  >
    <div>
      <label
        class="label"
        for="use-template"
      >
        Use Template
      </label>
      <select
        class="input-field appearance-none cursor-pointer"
        id="use-template"
      >
        <option
          value=""
        >
          Select a template...
        </option>
      </select>
    </div>
    <div>
      <label
        class="label"
        for="cover-letter"
      >
        Cover Letter
      </label>
      <textarea
        aria-describedby="proposal-word-count"
        aria-invalid="false"
        class="textarea-field"
        id="cover-letter"
        placeholder="Describe your relevant experience, your approach to this project, and why you're the best fit..."
        rows="6"
      />
      <p
        class="mt-1 text-xs font-medium text-red-400"
        id="proposal-word-count"
      >
        0
         
        words
         (minimum 
        50
        )
        <span
          class="ml-1 text-amber-800/80 font-normal"
        >
          — 
          50
           more 
          words
           needed
        </span>
      </p>
    </div>
    <div>
      <label
        class="label"
        for="your-bid-xlm"
      >
        Your Bid (XLM)
      </label>
      <input
        class="input-field"
        id="your-bid-xlm"
        min="1"
        placeholder="Enter your bid amount"
        step="1"
        type="number"
        value="500.0000000"
      />
      <p
        class="mt-1 text-xs text-amber-600"
      >
        This value is committed as a hash and hidden until reveal phase.
      </p>
    </div>
    <div>
      <label
        class="label"
        for="reveal-nonce-keep-safe"
      >
        Reveal Nonce (keep safe)
      </label>
      <input
        class="input-field font-mono text-xs"
        id="reveal-nonce-keep-safe"
        placeholder="Random nonce for reveal"
        type="text"
        value="00000000000000000000000000000000"
      />
      <p
        class="mt-1 text-xs text-amber-600"
      >
        You must keep this nonce to reveal your bid later.
      </p>
    </div>
    <button
      class="btn-primary w-full flex items-center justify-center gap-2"
      disabled=""
    >
      Submit Proposal
    </button>
  </div>
</div>
`;

exports[`static component snapshots BoostJobModal default: BoostJobModal 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center p-4 bg-ink-950/80"
>
  <button
    aria-label="Close dialog"
    class="absolute inset-0 bg-black/60 backdrop-blur-sm"
    type="button"
  />
  <div
    aria-labelledby="boost-job-title"
    aria-modal="true"
    class="relative w-full max-w-md bg-ink-900 border border-market-500/20 rounded-2xl p-6 shadow-2xl animate-scale-in"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="flex items-start justify-between mb-5"
    >
      <div>
        <h2
          class="font-display text-xl font-bold text-amber-100"
          id="boost-job-title"
        >
          Boost Job Listing
        </h2>
        <p
          class="text-xs text-amber-800 mt-0.5 truncate max-w-xs"
        >
          Build a Soroban escrow contract for marketplace payouts
        </p>
      </div>
      <button
        aria-label="Close boost job modal"
        class="text-amber-700 hover:text-amber-400 text-xl leading-none ml-4"
      >
        ✕
      </button>
    </div>
    <div
      class="space-y-3 mb-5"
    >
      <button
        class="w-full text-left rounded-xl p-4 border transition-all border-market-500/60 bg-market-500/10"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-sm font-semibold text-amber-100"
          >
            7-Day Boost
          </span>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="font-mono text-market-400 font-bold"
            >
              5
               XLM
            </span>
          </div>
        </div>
        <p
          class="text-xs text-amber-700"
        >
          Featured at the top of listings for 7 days
        </p>
        <p
          class="text-xs text-amber-800 mt-1"
        >
          Expires:
           
          Sep 1, 2026
        </p>
      </button>
      <button
        class="w-full text-left rounded-xl p-4 border transition-all border-market-500/15 bg-ink-800 hover:border-market-500/30"
      >
        <div
          class="flex items-center justify-between mb-1"
        >
          <span
            class="text-sm font-semibold text-amber-100"
          >
            30-Day Boost
          </span>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="text-xs bg-market-500/20 text-market-400 border border-market-500/30 px-2 py-0.5 rounded-full"
            >
              Best value
            </span>
            <span
              class="font-mono text-market-400 font-bold"
            >
              15
               XLM
            </span>
          </div>
        </div>
        <p
          class="text-xs text-amber-700"
        >
          Featured at the top of listings for 30 days
        </p>
        <p
          class="text-xs text-amber-800 mt-1"
        >
          Expires:
           
          Sep 24, 2026
        </p>
      </button>
    </div>
    <div
      class="flex gap-3"
    >
      <button
        class="flex-1 btn-secondary py-2.5 text-sm"
      >
        Cancel
      </button>
      <button
        class="flex-1 btn-primary py-2.5 text-sm"
      >
        Pay 
        5
         XLM & Boost
      </button>
    </div>
  </div>
</div>
`;

exports[`static component snapshots BulkJobActionBar default: BulkJobActionBar 1`] = `
<div
  data-testid="bulk-job-action-bar-stub"
/>
`;

exports[`static component snapshots BulkJobActionBar loading: BulkJobActionBar loading 1`] = `
<div
  data-testid="bulk-job-action-bar-stub"
/>
`;

exports[`static component snapshots BuyXLMModal default: BuyXLMModal 1`] = `
<div
  data-testid="buy-xlm-modal-stub"
/>
`;

exports[`static component snapshots ClientSpendingTab empty: ClientSpendingTab empty 1`] = `
<div
  data-testid="client-spending-tab-stub"
/>
`;

exports[`static component snapshots ClientSpendingTab loading: ClientSpendingTab loading 1`] = `
<div
  data-testid="client-spending-tab-stub"
/>
`;

exports[`static component snapshots ClientSpendingTab populated: ClientSpendingTab populated 1`] = `
<div
  data-testid="client-spending-tab-stub"
/>
`;

exports[`static component snapshots ExtendJobModal default: ExtendJobModal 1`] = `
<div
  data-testid="extend-job-modal-stub"
/>
`;

exports[`static component snapshots FeeEstimationModal loading: FeeEstimationModal loading 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center p-4"
>
  <button
    aria-label="Close dialog"
    class="absolute inset-0 bg-black/60 backdrop-blur-sm"
    type="button"
  />
  <div
    aria-labelledby="fee-estimation-title"
    aria-modal="true"
    class="relative card max-w-md w-full bg-ink-900 border border-market-500/20"
    role="dialog"
    tabindex="-1"
  >
    <h2
      class="font-display text-xl font-bold text-amber-100 mb-1"
      id="fee-estimation-title"
    >
      Confirm transaction
    </h2>
    <p
      class="text-xs text-amber-700 mb-4"
    >
      create_escrow
       — review the fee before signing.
    </p>
    <p
      class="text-amber-200 text-sm mb-4"
    >
      Simulating contract call…
    </p>
    <div
      class="flex gap-3"
    >
      <button
        class="btn-secondary flex-1 text-sm"
      >
        Cancel
      </button>
      <button
        class="btn-primary flex-1 text-sm disabled:opacity-50 disabled:cursor-not-allowed"
        disabled=""
      >
        Confirm & Sign
      </button>
    </div>
  </div>
</div>
`;

exports[`static component snapshots FreelancerCard default: FreelancerCard 1`] = `
<a
  href="/freelancers/GBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB"
>
  <div
    class="card-hover group flex h-full flex-col justify-between gap-4 p-5 transition-shadow hover:shadow-xl"
  >
    <div
      class="space-y-3"
    >
      <div
        class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-3"
      >
        <div>
          <h3
            class="font-display font-semibold text-amber-100 text-base leading-snug line-clamp-2"
          >
            Jane Doe
          </h3>
          <div
            class="text-amber-700 text-sm"
          >
            <span
              class="inline-flex"
            >
              GBBB...BBBB
            </span>
          </div>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <span
            class="inline-flex items-center rounded-full border px-3 py-1 text-xs font-semibold bg-emerald-500/10 text-emerald-400 border-emerald-500/20"
          >
            Available
          </span>
          <span
            class="inline-flex items-center rounded-full border px-3 py-1 text-xs font-semibold tracking-wide border-emerald-400/25 bg-emerald-400/10 text-emerald-300 hidden sm:inline-flex"
          >
            Top Rated
          </span>
        </div>
      </div>
      <p
        class="text-amber-800 text-sm leading-relaxed line-clamp-3"
      >
        Full-stack Stellar developer with Soroban experience.
      </p>
      <div
        class="flex flex-wrap gap-2"
      >
        <span
          class="text-xs bg-market-500/8 text-market-500/80 border border-market-500/15 px-2 py-0.5 rounded-md"
        >
          React
        </span>
        <span
          class="text-xs bg-market-500/8 text-market-500/80 border border-market-500/15 px-2 py-0.5 rounded-md"
        >
          Soroban
        </span>
      </div>
    </div>
    <div
      class="grid gap-2 text-sm text-amber-800 sm:grid-cols-3"
    >
      <div
        class="rounded-2xl border border-[rgba(251,191,36,0.15)] bg-market-500/5 p-3"
      >
        <p
          class="text-xs uppercase tracking-[0.15em] text-amber-700"
        >
          Jobs
        </p>
        <p
          class="font-semibold text-amber-100"
        >
          5
        </p>
      </div>
      <div
        class="rounded-2xl border border-[rgba(251,191,36,0.15)] bg-market-500/5 p-3"
      >
        <p
          class="text-xs uppercase tracking-[0.15em] text-amber-700"
        >
          Earnings
        </p>
        <p
          class="font-semibold text-amber-100"
        >
          250 XLM
        </p>
      </div>
      <div
        class="rounded-2xl border border-[rgba(251,191,36,0.15)] bg-market-500/5 p-3"
      >
        <p
          class="text-xs uppercase tracking-[0.15em] text-amber-700"
        >
          Rating
        </p>
        <p
          class="font-semibold text-amber-100"
        >
          4.8
        </p>
      </div>
    </div>
  </div>
</a>
`;

exports[`static component snapshots FreelancerProfileSkeleton loading skeleton: FreelancerProfileSkeleton 1`] = `
<div
  aria-busy="true"
  class="card space-y-6 animate-pulse"
>
  <div
    class="flex items-center gap-4"
  >
    <div
      class="h-20 w-20 rounded-full bg-market-500/10"
    />
    <div
      class="space-y-2"
    >
      <div
        class="h-6 w-48 bg-market-500/10 rounded"
      />
      <div
        class="h-4 w-32 bg-market-500/10 rounded"
      />
    </div>
  </div>
  <div
    class="space-y-2"
  >
    <div
      class="h-4 w-full bg-market-500/10 rounded"
    />
    <div
      class="h-4 w-5/6 bg-market-500/10 rounded"
    />
    <div
      class="h-4 w-4/6 bg-market-500/10 rounded"
    />
  </div>
  <div
    class="flex gap-4"
  >
    <div
      class="flex-1 h-12 bg-market-500/10 rounded border border-market-500/15"
    />
    <div
      class="flex-1 h-12 bg-market-500/10 rounded border border-market-500/15"
    />
    <div
      class="flex-1 h-12 bg-market-500/10 rounded border border-market-500/15"
    />
  </div>
  <div>
    <div
      class="h-5 w-24 bg-market-500/10 rounded mb-3"
    />
    <div
      class="flex flex-wrap gap-2"
    >
      <div
        class="h-6 w-16 bg-market-500/10 rounded-full"
      />
      <div
        class="h-6 w-20 bg-market-500/10 rounded-full"
      />
      <div
        class="h-6 w-14 bg-market-500/10 rounded-full"
      />
      <div
        class="h-6 w-18 bg-market-500/10 rounded-full"
      />
      <div
        class="h-6 w-12 bg-market-500/10 rounded-full"
      />
    </div>
  </div>
  <div>
    <div
      class="h-5 w-28 bg-market-500/10 rounded mb-3"
    />
    <div
      class="flex flex-wrap gap-2"
    >
      <div
        class="h-7 w-24 bg-market-500/10 rounded-full"
      />
      <div
        class="h-7 w-20 bg-market-500/10 rounded-full"
      />
      <div
        class="h-7 w-16 bg-market-500/10 rounded-full"
      />
    </div>
  </div>
  <div>
    <div
      class="flex items-center justify-between mb-3"
    >
      <div
        class="h-5 w-20 bg-market-500/10 rounded"
      />
      <div
        class="h-4 w-8 bg-market-500/10 rounded"
      />
    </div>
    <div
      class="grid grid-cols-2 gap-3"
    >
      <div
        class="h-24 bg-market-500/10 rounded-lg"
      />
      <div
        class="h-24 bg-market-500/10 rounded-lg"
      />
    </div>
  </div>
  <div>
    <div
      class="h-5 w-32 bg-market-500/10 rounded mb-3"
    />
    <div
      class="space-y-2"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="h-8 w-8 rounded-full bg-market-500/10"
        />
        <div
          class="h-4 w-32 bg-market-500/10 rounded"
        />
      </div>
      <div
        class="flex items-center gap-2"
      >
        <div
          class="h-8 w-8 rounded-full bg-market-500/10"
        />
        <div
          class="h-4 w-28 bg-market-500/10 rounded"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`static component snapshots FreelancerTierBadge Expert: FreelancerTierBadge Expert 1`] = `
<span
  class="inline-flex items-center rounded-full border px-3 py-1 text-xs font-semibold tracking-wide border-amber-400/30 bg-amber-400/10 text-amber-200"
>
  Expert
</span>
`;

exports[`static component snapshots FreelancerTierBadge Newcomer: FreelancerTierBadge Newcomer 1`] = `
<span
  class="inline-flex items-center rounded-full border px-3 py-1 text-xs font-semibold tracking-wide border-slate-400/20 bg-slate-400/10 text-slate-200"
>
  Newcomer
</span>
`;

exports[`static component snapshots FreelancerTierBadge Rising Talent: FreelancerTierBadge Rising Talent 1`] = `
<span
  class="inline-flex items-center rounded-full border px-3 py-1 text-xs font-semibold tracking-wide border-sky-400/25 bg-sky-400/10 text-sky-300"
>
  Rising Talent
</span>
`;

exports[`static component snapshots FreelancerTierBadge Top Rated: FreelancerTierBadge Top Rated 1`] = `
<span
  class="inline-flex items-center rounded-full border px-3 py-1 text-xs font-semibold tracking-wide border-emerald-400/25 bg-emerald-400/10 text-emerald-300"
>
  Top Rated
</span>
`;

exports[`static component snapshots JobCard bookmarked: JobCard bookmarked 1`] = `
<div
  class="card-hover group animate-fade-in relative cursor-pointer outline-none  "
  tabindex="-1"
>
  <div
    class="flex items-start justify-between gap-3 mb-3"
  >
    <div
      class="flex items-center gap-2"
    >
      <a
        href="/jobs/job-bookmarked"
      >
        <h3
          class="font-display font-semibold text-amber-100 text-base leading-snug group-hover:text-market-300 transition-colors line-clamp-2"
        >
          Build a Soroban escrow contract for marketplace payouts
        </h3>
      </a>
    </div>
    <div
      class="flex items-center gap-2"
    >
      <span
        class="badge-open flex-shrink-0 text-xs"
      >
        Open
      </span>
    </div>
  </div>
  <p
    class="text-amber-800/80 text-sm leading-relaxed line-clamp-3 mb-4"
  >
    Need a secure escrow contract and integration tests for release and refund paths on testnet.
  </p>
  <div
    class="flex flex-wrap gap-1.5 mb-4"
  >
    <span
      class="text-xs bg-market-500/8 text-market-500/80 border border-market-500/15 px-2 py-0.5 rounded-md"
    >
      Rust
    </span>
    <span
      class="text-xs bg-market-500/8 text-market-500/80 border border-market-500/15 px-2 py-0.5 rounded-md"
    >
      Soroban
    </span>
    <span
      class="text-xs bg-market-500/8 text-market-500/80 border border-market-500/15 px-2 py-0.5 rounded-md"
    >
      Testing
    </span>
  </div>
  <div
    class="flex items-center justify-between pt-3 border-t border-[rgba(251,191,36,0.07)] relative"
  >
    <div>
      <p
        class="text-xs text-amber-800 mb-0.5"
      >
        Budget
      </p>
      <p
        class="font-mono font-semibold text-market-400 text-sm"
      >
        500 XLM
      </p>
      <p
        class="text-[10px] text-amber-700 mt-0.5"
      >
        ≈ 
        $60.00
         USD
      </p>
    </div>
    <div
      class="text-right flex items-center gap-2"
    >
      <button
        aria-label="Remove bookmark"
        class="p-2 sm:p-1.5 rounded-md transition-all flex items-center justify-center hover:bg-amber-500/10 group/bookmark min-h-[44px] min-w-[44px]"
        title="Remove bookmark"
        type="button"
      >
        <svg
          class="transition-colors group-hover/bookmark:text-amber-400 text-amber-400"
          fill="currentColor"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m14 20 4-6H4l4 6z"
          />
          <path
            d="M18 8a4 4 0 1 0-8 0 4 4 0 0 0 8 0z"
          />
        </svg>
      </button>
      <div
        class="text-right"
      >
        <p
          class="text-xs text-amber-800 mb-0.5"
        >
          2
           applicant
          s
        </p>
      </div>
      <p
        class="text-xs text-amber-800/60"
      >
        8 months ago
      </p>
    </div>
  </div>
  <div
    class="mt-3 flex items-center gap-2 flex-wrap"
  >
    <span
      class="text-xs text-amber-700 bg-ink-700 px-2.5 py-1 rounded-full border border-[rgba(251,191,36,0.08)]"
    >
      Smart Contracts
    </span>
  </div>
  <div
    data-testid="job-status-timeline-stub"
  />
</div>
`;

exports[`static component snapshots JobCard default: JobCard default 1`] = `
<div
  class="card-hover group animate-fade-in relative cursor-pointer outline-none  "
  tabindex="-1"
>
  <div
    class="flex items-start justify-between gap-3 mb-3"
  >
    <div
      class="flex items-center gap-2"
    >
      <a
        href="/jobs/job-1"
      >
        <h3
          class="font-display font-semibold text-amber-100 text-base leading-snug group-hover:text-market-300 transition-colors line-clamp-2"
        >
          Build a Soroban escrow contract for marketplace payouts
        </h3>
      </a>
    </div>
    <div
      class="flex items-center gap-2"
    >
      <span
        class="badge-open flex-shrink-0 text-xs"
      >
        Open
      </span>
    </div>
  </div>
  <p
    class="text-amber-800/80 text-sm leading-relaxed line-clamp-3 mb-4"
  >
    Need a secure escrow contract and integration tests for release and refund paths on testnet.
  </p>
  <div
    class="flex flex-wrap gap-1.5 mb-4"
  >
    <span
      class="text-xs bg-market-500/8 text-market-500/80 border border-market-500/15 px-2 py-0.5 rounded-md"
    >
      Rust
    </span>
    <span
      class="text-xs bg-market-500/8 text-market-500/80 border border-market-500/15 px-2 py-0.5 rounded-md"
    >
      Soroban
    </span>
    <span
      class="text-xs bg-market-500/8 text-market-500/80 border border-market-500/15 px-2 py-0.5 rounded-md"
    >
      Testing
    </span>
  </div>
  <div
    class="flex items-center justify-between pt-3 border-t border-[rgba(251,191,36,0.07)] relative"
  >
    <div>
      <p
        class="text-xs text-amber-800 mb-0.5"
      >
        Budget
      </p>
      <p
        class="font-mono font-semibold text-market-400 text-sm"
      >
        500 XLM
      </p>
      <p
        class="text-[10px] text-amber-700 mt-0.5"
      >
        ≈ 
        $60.00
         USD
      </p>
    </div>
    <div
      class="text-right flex items-center gap-2"
    >
      <button
        aria-label="Save job"
        class="p-2 sm:p-1.5 rounded-md transition-all flex items-center justify-center hover:bg-amber-500/10 group/bookmark min-h-[44px] min-w-[44px]"
        title="Save job"
        type="button"
      >
        <svg
          class="transition-colors group-hover/bookmark:text-amber-400 text-amber-700/60 group-hover/bookmark:text-amber-400"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m14 20 4-6H4l4 6z"
          />
          <path
            d="M18 8a4 4 0 1 0-8 0 4 4 0 0 0 8 0z"
          />
        </svg>
      </button>
      <div
        class="text-right"
      >
        <p
          class="text-xs text-amber-800 mb-0.5"
        >
          2
           applicant
          s
        </p>
      </div>
      <p
        class="text-xs text-amber-800/60"
      >
        8 months ago
      </p>
    </div>
  </div>
  <div
    class="mt-3 flex items-center gap-2 flex-wrap"
  >
    <span
      class="text-xs text-amber-700 bg-ink-700 px-2.5 py-1 rounded-full border border-[rgba(251,191,36,0.08)]"
    >
      Smart Contracts
    </span>
  </div>
  <div
    data-testid="job-status-timeline-stub"
  />
</div>
`;

exports[`static component snapshots JobCard loading skeleton: JobCardSkeleton 1`] = `
<div
  aria-busy="true"
  aria-label="Loading job card"
  class="card animate-pulse"
>
  <div
    class="flex items-start justify-between gap-3 mb-3"
  >
    <div
      class="h-5 w-3/5 rounded bg-market-500/8"
    />
    <div
      class="h-5 w-16 rounded-full bg-market-500/12 flex-shrink-0"
    />
  </div>
  <div
    class="space-y-2 mb-4"
  >
    <div
      class="h-3 w-full rounded bg-market-500/8"
    />
    <div
      class="h-3 w-11/12 rounded bg-market-500/8"
    />
    <div
      class="h-3 w-4/5 rounded bg-market-500/8"
    />
  </div>
  <div
    class="flex flex-wrap gap-1.5 mb-4"
  >
    <div
      class="h-5 w-16 rounded-md bg-market-500/10 border border-market-500/15"
    />
    <div
      class="h-5 w-20 rounded-md bg-market-500/10 border border-market-500/15"
    />
    <div
      class="h-5 w-14 rounded-md bg-market-500/10 border border-market-500/15"
    />
  </div>
  <div
    class="flex items-center justify-between pt-3 border-t border-[rgba(251,191,36,0.07)]"
  >
    <div
      class="space-y-1"
    >
      <div
        class="h-3 w-10 rounded bg-market-500/8"
      />
      <div
        class="h-4 w-20 rounded bg-market-500/12"
      />
    </div>
    <div
      class="space-y-1.5 flex flex-col items-end"
    >
      <div
        class="h-3 w-24 rounded bg-market-500/8"
      />
      <div
        class="h-3 w-16 rounded bg-market-500/8"
      />
    </div>
  </div>
  <div
    class="mt-3"
  >
    <div
      class="h-6 w-24 rounded-full bg-market-500/8 border border-[rgba(251,191,36,0.08)]"
    />
  </div>
</div>
`;

exports[`static component snapshots JobFiltersPanel active chips: ActiveFilterChips 1`] = `
<div
  class="flex flex-wrap gap-2 mb-4"
>
  <span
    class="text-xs text-amber-800 self-center"
  >
    jobs.activeFilters
    :
  </span>
  <button
    class="text-xs px-2.5 py-1 rounded-full bg-market-500/15 text-market-300 border border-market-500/25 hover:bg-market-500/25"
    type="button"
  >
    jobs.budgetRange: 100 – ∞
     ×
  </button>
  <button
    class="text-xs px-2.5 py-1 rounded-full bg-market-500/15 text-market-300 border border-market-500/25 hover:bg-market-500/25"
    type="button"
  >
    jobs.skills: Rust
     ×
  </button>
</div>
`;

exports[`static component snapshots JobFiltersPanel expanded: JobFiltersPanel expanded 1`] = `
<div
  class="space-y-5"
>
  <div>
    <p
      class="label mb-2"
    >
      jobs.search
    </p>
    <div
      class="relative"
    >
      <svg
        class="absolute left-2.5 top-1/2 -translate-y-1/2 w-3.5 h-3.5 text-amber-800"
        fill="none"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
      >
        <circle
          cx="11"
          cy="11"
          r="8"
        />
        <path
          d="m21 21-4.35-4.35"
        />
      </svg>
      <input
        aria-label="jobs.search"
        class="input-field pl-8 pr-8 text-xs"
        placeholder="jobs.searchPlaceholder"
        type="text"
        value=""
      />
    </div>
  </div>
  <div>
    <p
      class="label mb-2"
    >
      jobs.budgetRange
    </p>
    <div
      class="flex gap-2 items-center mb-2"
    >
      <input
        class="w-full bg-market-900/40 border border-amber-900/30 rounded px-2 py-1 text-xs text-amber-100"
        placeholder="jobs.minBudget"
        type="number"
        value=""
      />
      <span
        class="text-amber-900 text-[10px] font-bold"
      >
        –
      </span>
      <input
        class="w-full bg-market-900/40 border border-amber-900/30 rounded px-2 py-1 text-xs text-amber-100"
        placeholder="jobs.maxBudget"
        type="number"
        value=""
      />
    </div>
    <input
      aria-label="jobs.budgetRange"
      class="w-full accent-market-400"
      max="5000"
      min="0"
      step="10"
      type="range"
      value="500"
    />
  </div>
  <div>
    <p
      class="label mb-2"
    >
      jobs.skills
    </p>
    <input
      class="input-field text-xs mb-2"
      placeholder="jobs.skillsPlaceholder"
      type="text"
      value=""
    />
    <div
      class="flex flex-wrap gap-1"
    >
      <button
        class="text-[10px] px-2 py-0.5 rounded-full border transition-colors text-amber-800 border-amber-900/30 hover:border-market-500/30"
        type="button"
      >
        JavaScript
      </button>
      <button
        class="text-[10px] px-2 py-0.5 rounded-full border transition-colors text-amber-800 border-amber-900/30 hover:border-market-500/30"
        type="button"
      >
        TypeScript
      </button>
      <button
        class="text-[10px] px-2 py-0.5 rounded-full border transition-colors text-amber-800 border-amber-900/30 hover:border-market-500/30"
        type="button"
      >
        Python
      </button>
      <button
        class="text-[10px] px-2 py-0.5 rounded-full border transition-colors text-amber-800 border-amber-900/30 hover:border-market-500/30"
        type="button"
      >
        React
      </button>
      <button
        class="text-[10px] px-2 py-0.5 rounded-full border transition-colors text-amber-800 border-amber-900/30 hover:border-market-500/30"
        type="button"
      >
        Node.js
      </button>
      <button
        class="text-[10px] px-2 py-0.5 rounded-full border transition-colors text-amber-800 border-amber-900/30 hover:border-market-500/30"
        type="button"
      >
        Solidity
      </button>
      <button
        class="text-[10px] px-2 py-0.5 rounded-full border transition-colors text-amber-800 border-amber-900/30 hover:border-market-500/30"
        type="button"
      >
        Rust
      </button>
      <button
        class="text-[10px] px-2 py-0.5 rounded-full border transition-colors text-amber-800 border-amber-900/30 hover:border-market-500/30"
        type="button"
      >
        Go
      </button>
      <button
        class="text-[10px] px-2 py-0.5 rounded-full border transition-colors text-amber-800 border-amber-900/30 hover:border-market-500/30"
        type="button"
      >
        AWS
      </button>
      <button
        class="text-[10px] px-2 py-0.5 rounded-full border transition-colors text-amber-800 border-amber-900/30 hover:border-market-500/30"
        type="button"
      >
        Docker
      </button>
      <button
        class="text-[10px] px-2 py-0.5 rounded-full border transition-colors text-amber-800 border-amber-900/30 hover:border-market-500/30"
        type="button"
      >
        Stellar
      </button>
      <button
        class="text-[10px] px-2 py-0.5 rounded-full border transition-colors text-amber-800 border-amber-900/30 hover:border-market-500/30"
        type="button"
      >
        Soroban
      </button>
    </div>
  </div>
  <div>
    <p
      class="label mb-2"
    >
      jobs.clientRating
    </p>
    <select
      class="w-full bg-market-900/40 border border-amber-900/30 rounded px-2 py-1.5 text-xs text-amber-100"
    >
      <option
        value=""
      >
        Any
      </option>
      <option
        value="3"
      >
        3.0+
      </option>
      <option
        value="3.5"
      >
        3.5+
      </option>
      <option
        value="4"
      >
        4.0+
      </option>
      <option
        value="4.5"
      >
        4.5+
      </option>
    </select>
  </div>
  <div>
    <p
      class="label mb-2"
    >
      jobs.duration
    </p>
    <select
      class="w-full bg-market-900/40 border border-amber-900/30 rounded px-2 py-1.5 text-xs text-amber-100"
    >
      <option
        value=""
      >
        Any
      </option>
      <option
        value="short"
      >
        jobs.durationShort
      </option>
      <option
        value="medium"
      >
        jobs.durationMedium
      </option>
      <option
        value="long"
      >
        jobs.durationLong
      </option>
    </select>
  </div>
  <div>
    <p
      class="label mb-2"
    >
      jobs.posted
    </p>
    <select
      class="w-full bg-market-900/40 border border-amber-900/30 rounded px-2 py-1.5 text-xs text-amber-100"
    >
      <option
        value=""
      >
        Any time
      </option>
      <option
        value="today"
      >
        jobs.postedToday
      </option>
      <option
        value="week"
      >
        jobs.postedWeek
      </option>
      <option
        value="month"
      >
        jobs.postedMonth
      </option>
    </select>
  </div>
  <div>
    <p
      class="label mb-2"
    >
      jobs.applications
    </p>
    <button
      class="w-full text-left px-3 py-2 rounded-lg text-sm transition-colors text-amber-700 hover:bg-market-500/8"
      type="button"
    >
      jobs.lowCompetition
    </button>
  </div>
  <button
    class="text-xs text-market-400 hover:text-market-300 font-semibold w-full"
    type="button"
  >
    jobs.clearAll
  </button>
</div>
`;

exports[`static component snapshots JobStatusTimeline compact cancelled: JobStatusTimeline compact cancelled 1`] = `
<div
  data-testid="job-status-timeline-stub"
/>
`;

exports[`static component snapshots JobStatusTimeline open: JobStatusTimeline open 1`] = `
<div
  data-testid="job-status-timeline-stub"
/>
`;

exports[`static component snapshots JobTimeline compact: JobTimeline compact 1`] = `
<div
  data-testid="job-timeline-stub"
/>
`;

exports[`static component snapshots JobTimeline default: JobTimeline default 1`] = `
<div
  data-testid="job-timeline-stub"
/>
`;

exports[`static component snapshots KeyboardShortcutsModal open: KeyboardShortcutsModal 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center p-4 z-[70]"
>
  <button
    aria-label="Close dialog"
    class="absolute inset-0 bg-black/60 backdrop-blur-sm"
    type="button"
  />
  <div
    aria-labelledby="shortcuts-title"
    aria-modal="true"
    class="relative w-full max-w-xl rounded-2xl border border-market-500/20 bg-ink-900 p-6 shadow-2xl"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="mb-4 flex items-center justify-between"
    >
      <h2
        class="font-display text-xl font-bold text-amber-100"
        id="shortcuts-title"
      >
        Keyboard Shortcuts
      </h2>
      <button
        class="btn-ghost px-3 py-1 text-xs"
        type="button"
      >
        Close
      </button>
    </div>
    <table
      class="w-full text-sm"
    >
      <thead>
        <tr
          class="border-b border-market-500/10 text-left text-xs uppercase tracking-wide text-amber-800"
        >
          <th
            class="pb-2 pr-4"
          >
            Key
          </th>
          <th
            class="pb-2"
          >
            Action
          </th>
        </tr>
      </thead>
      <tbody
        class="divide-y divide-market-500/10"
      >
        <tr>
          <td
            class="py-2.5 pr-4"
          >
            <kbd
              class="rounded border border-market-500/25 bg-ink-800 px-2 py-1 text-xs font-semibold text-market-300"
            >
              G
            </kbd>
          </td>
          <td
            class="py-2.5 text-amber-200/90"
          >
            Go to Jobs listing
          </td>
        </tr>
        <tr>
          <td
            class="py-2.5 pr-4"
          >
            <kbd
              class="rounded border border-market-500/25 bg-ink-800 px-2 py-1 text-xs font-semibold text-market-300"
            >
              D
            </kbd>
          </td>
          <td
            class="py-2.5 text-amber-200/90"
          >
            Go to Dashboard
          </td>
        </tr>
        <tr>
          <td
            class="py-2.5 pr-4"
          >
            <kbd
              class="rounded border border-market-500/25 bg-ink-800 px-2 py-1 text-xs font-semibold text-market-300"
            >
              P
            </kbd>
          </td>
          <td
            class="py-2.5 text-amber-200/90"
          >
            Post a new job
          </td>
        </tr>
        <tr>
          <td
            class="py-2.5 pr-4"
          >
            <kbd
              class="rounded border border-market-500/25 bg-ink-800 px-2 py-1 text-xs font-semibold text-market-300"
            >
              Shift
            </kbd>
          </td>
          <td
            class="py-2.5 text-amber-200/90"
          >
            Cycle through themes (Light/Dark/High Contrast)
          </td>
        </tr>
        <tr>
          <td
            class="py-2.5 pr-4"
          >
            <kbd
              class="rounded border border-market-500/25 bg-ink-800 px-2 py-1 text-xs font-semibold text-market-300"
            >
              Cmd/Ctrl
            </kbd>
          </td>
          <td
            class="py-2.5 text-amber-200/90"
          >
            Open command palette
          </td>
        </tr>
        <tr>
          <td
            class="py-2.5 pr-4"
          >
            <kbd
              class="rounded border border-market-500/25 bg-ink-800 px-2 py-1 text-xs font-semibold text-market-300"
            >
              ?
            </kbd>
          </td>
          <td
            class="py-2.5 text-amber-200/90"
          >
            Show this shortcut guide
          </td>
        </tr>
        <tr>
          <td
            class="py-2.5 pr-4"
          >
            <kbd
              class="rounded border border-market-500/25 bg-ink-800 px-2 py-1 text-xs font-semibold text-market-300"
            >
              Esc
            </kbd>
          </td>
          <td
            class="py-2.5 text-amber-200/90"
          >
            Close modal / dialog
          </td>
        </tr>
        <tr>
          <td
            class="py-2.5 pr-4"
          >
            <kbd
              class="rounded border border-market-500/25 bg-ink-800 px-2 py-1 text-xs font-semibold text-market-300"
            >
              /
            </kbd>
          </td>
          <td
            class="py-2.5 text-amber-200/90"
          >
            Focus search bar
          </td>
        </tr>
        <tr>
          <td
            class="py-2.5 pr-4"
          >
            <kbd
              class="rounded border border-market-500/25 bg-ink-800 px-2 py-1 text-xs font-semibold text-market-300"
            >
              B
            </kbd>
          </td>
          <td
            class="py-2.5 text-amber-200/90"
          >
            Toggle bookmark on focused job
          </td>
        </tr>
      </tbody>
    </table>
    <p
      class="mt-5 text-xs text-amber-800"
    >
      Shortcuts are disabled while typing in form fields.
    </p>
  </div>
</div>
`;

exports[`static component snapshots LanguageSwitcher default: LanguageSwitcher 1`] = `
<select
  aria-label="language.switch"
  class="bg-market-900/40 border border-amber-900/30 rounded px-2 py-1 text-xs text-amber-100 cursor-pointer"
>
  <option
    value="en"
  >
    language.english
  </option>
  <option
    value="es"
  >
    language.spanish
  </option>
  <option
    value="fr"
  >
    language.french
  </option>
  <option
    value="pt"
  >
    language.portuguese
  </option>
</select>
`;

exports[`static component snapshots Navbar logged in: Navbar logged in 1`] = `
<nav
  class="sticky top-0 z-50 border-b border-[rgba(251,191,36,0.10)] bg-ink-900/85 backdrop-blur-xl"
>
  <div
    class="max-w-7xl mx-auto px-4 sm:px-6 h-16 flex items-center justify-between gap-2 sm:gap-4"
  >
    <a
      href="/"
    >
      <div
        class="w-8 h-8 rounded-lg bg-market-500/15 border border-market-500/25 flex items-center justify-center group-hover:border-market-500/50 transition-colors"
      >
        <svg
          class="w-4 h-4 text-market-400"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
        >
          <path
            d="M20.25 14.15v4.25c0 1.094-.787 2.036-1.872 2.18-2.087.277-4.216.42-6.378.42s-4.291-.143-6.378-.42c-1.085-.144-1.872-1.086-1.872-2.18v-4.25m16.5 0a2.18 2.18 0 00.75-1.661V8.706c0-1.081-.768-2.015-1.837-2.175a48.114 48.114 0 00-3.413-.387m4.5 8.006c-.194.165-.42.295-.673.38A23.978 23.978 0 0112 15.75c-2.648 0-5.195-.429-7.577-1.22a2.016 2.016 0 01-.673-.38m0 0A2.18 2.18 0 013 12.489V8.706c0-1.081.768-2.015 1.837-2.175a48.111 48.111 0 013.413-.387m7.5 0V5.25A2.25 2.25 0 0013.5 3h-3a2.25 2.25 0 00-2.25 2.25v.894m7.5 0a48.667 48.667 0 00-7.5 0M12 12.75h.008v.008H12v-.008z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
      <span
        class="hidden sm:inline font-display font-bold text-amber-100 text-lg tracking-tight"
      >
        Stellar
        <span
          class="text-market-400"
        >
          MarketPay
        </span>
      </span>
      <span
        class="sm:hidden font-display font-bold text-amber-100 text-sm tracking-tight"
      >
        <span
          class="text-market-400"
        >
          SMP
        </span>
      </span>
    </a>
    <span
      class="hidden lg:inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium border flex-shrink-0 bg-amber-500/10 text-amber-400 border-amber-500/20"
    >
      Testnet
    </span>
    <div
      class="hidden md:flex items-center gap-1"
    >
      <a
        href="/"
      >
        nav.home
      </a>
      <a
        href="/jobs"
      >
        nav.browseJobs
      </a>
      <a
        href="/dashboard"
      >
        nav.dashboard
      </a>
      <a
        href="/post-job"
      >
        nav.postJob
      </a>
      <a
        href="/insights"
      >
        nav.insights
      </a>
      <a
        href="/developer"
      >
        nav.developer
      </a>
      <a
        href="/dao"
      >
        nav.dao
      </a>
    </div>
    <div
      class="flex-1 md:flex-none"
    />
    <div
      class="relative hidden sm:flex items-center"
    >
      <button
        aria-label="Open global search"
        class="p-2 rounded-lg text-amber-700 hover:text-amber-300 hover:bg-market-500/8 transition-colors"
        title="Search (Ctrl/Cmd+K)"
        type="button"
      >
        <svg
          class="w-4 h-4"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M21 21l-4.35-4.35M10.5 18a7.5 7.5 0 110-15 7.5 7.5 0 010 15z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      class="hidden sm:flex items-center"
    >
      <select
        aria-label="language.switch"
        class="bg-market-900/40 border border-amber-900/30 rounded px-2 py-1 text-xs text-amber-100 cursor-pointer"
      >
        <option
          value="en"
        >
          language.english
        </option>
        <option
          value="es"
        >
          language.spanish
        </option>
        <option
          value="fr"
        >
          language.french
        </option>
        <option
          value="pt"
        >
          language.portuguese
        </option>
      </select>
    </div>
    <div
      class="hidden md:flex items-center"
    >
      <button
        aria-label="Currency: XLM. Click to switch"
        class="flex items-center gap-1.5 px-2.5 py-1 rounded-lg text-xs font-medium border transition-all duration-150 bg-market-500/10 text-market-400 border-market-500/20"
        title="Switch to USD"
      >
        <span
          class="text-[10px] font-bold"
        >
          ◎
        </span>
        XLM
      </button>
    </div>
    <div
      class="hidden md:flex items-center"
    >
      <button
        aria-label="Switch to light mode"
        class="p-1.5 rounded-lg text-amber-700 hover:text-amber-300 hover:bg-market-500/8 transition-colors"
        title="Switch to light mode"
      >
        <svg
          class="w-4 h-4"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      class="hidden md:flex items-center"
    >
      <select
        aria-label="language.switch"
        class="bg-market-900/40 border border-amber-900/30 rounded px-2 py-1 text-xs text-amber-100 cursor-pointer"
      >
        <option
          value="en"
        >
          language.english
        </option>
        <option
          value="es"
        >
          language.spanish
        </option>
      </select>
    </div>
    <div
      class="flex items-center gap-1 sm:gap-2 flex-shrink-0"
    >
      <div
        class="relative"
      >
        <button
          aria-label="Notifications"
          class="relative p-2 rounded-lg text-amber-700 hover:text-amber-300 hover:bg-market-500/8 transition-colors"
          title="Notifications"
          type="button"
        >
          <svg
            class="w-4 h-4"
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M15 17h5l-1.4-1.4A2 2 0 0118 14.2V11a6 6 0 10-12 0v3.2c0 .5-.2 1-.6 1.4L4 17h5m6 0a3 3 0 11-6 0m6 0H9"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
      <button
        class="flex items-center gap-1 sm:gap-1.5 address-tag cursor-pointer hover:opacity-80 transition-opacity text-xs sm:text-sm px-2 py-2 sm:px-3 sm:py-2 min-h-[44px]"
        title="wallet.balance"
      >
        <span
          class="w-1.5 h-1.5 rounded-full bg-emerald-400 animate-pulse"
        />
        <span
          class="hidden sm:inline"
        >
          GAAAAA...AAAWHF
        </span>
        <span
          class="sm:hidden text-[10px]"
        >
          GAAAAA...AAAWHF
        </span>
        <span
          class="text-xs text-amber-800"
        >
          wallet.loading
        </span>
      </button>
      <button
        class="hidden sm:inline text-xs text-amber-800 hover:text-amber-500 transition-colors px-2 py-1"
      >
        nav.disconnect
      </button>
    </div>
    <button
      aria-expanded="false"
      aria-label="Toggle menu"
      class="md:hidden w-10 h-10 min-h-[44px] min-w-[44px] flex items-center justify-center rounded-lg hover:bg-market-500/10 transition-colors"
    >
      <svg
        class="w-5 h-5 text-amber-300"
        fill="none"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
      >
        <path
          d="M3.75 6.75h16.5M3.75 12h16.5M3.75 17.25h16.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
  </div>
</nav>
`;

exports[`static component snapshots Navbar logged out: Navbar logged out 1`] = `
<nav
  class="sticky top-0 z-50 border-b border-[rgba(251,191,36,0.10)] bg-ink-900/85 backdrop-blur-xl"
>
  <div
    class="max-w-7xl mx-auto px-4 sm:px-6 h-16 flex items-center justify-between gap-2 sm:gap-4"
  >
    <a
      href="/"
    >
      <div
        class="w-8 h-8 rounded-lg bg-market-500/15 border border-market-500/25 flex items-center justify-center group-hover:border-market-500/50 transition-colors"
      >
        <svg
          class="w-4 h-4 text-market-400"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
        >
          <path
            d="M20.25 14.15v4.25c0 1.094-.787 2.036-1.872 2.18-2.087.277-4.216.42-6.378.42s-4.291-.143-6.378-.42c-1.085-.144-1.872-1.086-1.872-2.18v-4.25m16.5 0a2.18 2.18 0 00.75-1.661V8.706c0-1.081-.768-2.015-1.837-2.175a48.114 48.114 0 00-3.413-.387m4.5 8.006c-.194.165-.42.295-.673.38A23.978 23.978 0 0112 15.75c-2.648 0-5.195-.429-7.577-1.22a2.016 2.016 0 01-.673-.38m0 0A2.18 2.18 0 013 12.489V8.706c0-1.081.768-2.015 1.837-2.175a48.111 48.111 0 013.413-.387m7.5 0V5.25A2.25 2.25 0 0013.5 3h-3a2.25 2.25 0 00-2.25 2.25v.894m7.5 0a48.667 48.667 0 00-7.5 0M12 12.75h.008v.008H12v-.008z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
      <span
        class="hidden sm:inline font-display font-bold text-amber-100 text-lg tracking-tight"
      >
        Stellar
        <span
          class="text-market-400"
        >
          MarketPay
        </span>
      </span>
      <span
        class="sm:hidden font-display font-bold text-amber-100 text-sm tracking-tight"
      >
        <span
          class="text-market-400"
        >
          SMP
        </span>
      </span>
    </a>
    <span
      class="hidden lg:inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium border flex-shrink-0 bg-amber-500/10 text-amber-400 border-amber-500/20"
    >
      Testnet
    </span>
    <div
      class="hidden md:flex items-center gap-1"
    >
      <a
        href="/"
      >
        nav.home
      </a>
      <a
        href="/jobs"
      >
        nav.browseJobs
      </a>
      <a
        href="/dashboard"
      >
        nav.dashboard
      </a>
      <a
        href="/post-job"
      >
        nav.postJob
      </a>
      <a
        href="/insights"
      >
        nav.insights
      </a>
      <a
        href="/developer"
      >
        nav.developer
      </a>
      <a
        href="/dao"
      >
        nav.dao
      </a>
    </div>
    <div
      class="flex-1 md:flex-none"
    />
    <div
      class="relative hidden sm:flex items-center"
    >
      <button
        aria-label="Open global search"
        class="p-2 rounded-lg text-amber-700 hover:text-amber-300 hover:bg-market-500/8 transition-colors"
        title="Search (Ctrl/Cmd+K)"
        type="button"
      >
        <svg
          class="w-4 h-4"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M21 21l-4.35-4.35M10.5 18a7.5 7.5 0 110-15 7.5 7.5 0 010 15z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      class="hidden sm:flex items-center"
    >
      <select
        aria-label="language.switch"
        class="bg-market-900/40 border border-amber-900/30 rounded px-2 py-1 text-xs text-amber-100 cursor-pointer"
      >
        <option
          value="en"
        >
          language.english
        </option>
        <option
          value="es"
        >
          language.spanish
        </option>
        <option
          value="fr"
        >
          language.french
        </option>
        <option
          value="pt"
        >
          language.portuguese
        </option>
      </select>
    </div>
    <div
      class="hidden md:flex items-center"
    >
      <button
        aria-label="Currency: XLM. Click to switch"
        class="flex items-center gap-1.5 px-2.5 py-1 rounded-lg text-xs font-medium border transition-all duration-150 bg-market-500/10 text-market-400 border-market-500/20"
        title="Switch to USD"
      >
        <span
          class="text-[10px] font-bold"
        >
          ◎
        </span>
        XLM
      </button>
    </div>
    <div
      class="hidden md:flex items-center"
    >
      <button
        aria-label="Switch to light mode"
        class="p-1.5 rounded-lg text-amber-700 hover:text-amber-300 hover:bg-market-500/8 transition-colors"
        title="Switch to light mode"
      >
        <svg
          class="w-4 h-4"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      class="hidden md:flex items-center"
    >
      <select
        aria-label="language.switch"
        class="bg-market-900/40 border border-amber-900/30 rounded px-2 py-1 text-xs text-amber-100 cursor-pointer"
      >
        <option
          value="en"
        >
          language.english
        </option>
        <option
          value="es"
        >
          language.spanish
        </option>
      </select>
    </div>
    <div
      class="flex items-center gap-1 sm:gap-2 flex-shrink-0"
    >
      <button
        class="btn-primary text-xs sm:text-sm py-2 px-3 sm:px-4 min-h-[44px] flex items-center"
      >
        nav.connectWallet
      </button>
    </div>
    <button
      aria-expanded="false"
      aria-label="Toggle menu"
      class="md:hidden w-10 h-10 min-h-[44px] min-w-[44px] flex items-center justify-center rounded-lg hover:bg-market-500/10 transition-colors"
    >
      <svg
        class="w-5 h-5 text-amber-300"
        fill="none"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
      >
        <path
          d="M3.75 6.75h16.5M3.75 12h16.5M3.75 17.25h16.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
  </div>
</nav>
`;

exports[`static component snapshots Onboarding ProgressBar complete: ProgressBar complete 1`] = `
<div
  class="w-full"
>
  <div
    class="flex items-center justify-between text-xs mb-2"
  >
    <span
      class="text-amber-700 font-medium"
    >
      Profile Completion
    </span>
    <span
      class="font-mono font-semibold text-emerald-400"
    >
      5
      /
      5
       (
      100
      %)
    </span>
  </div>
  <div
    class="w-full bg-ink-900 rounded-full overflow-hidden border border-market-500/10 h-2"
  >
    <div
      class="h-full transition-all duration-500 rounded-full bg-gradient-to-r from-emerald-500 to-emerald-400"
      style="width: 100%;"
    />
  </div>
</div>
`;

exports[`static component snapshots Onboarding ProgressBar in progress: ProgressBar in progress 1`] = `
<div
  class="w-full"
>
  <div
    class="flex items-center justify-between text-xs mb-2"
  >
    <span
      class="text-amber-700 font-medium"
    >
      Profile Completion
    </span>
    <span
      class="font-mono font-semibold text-market-400"
    >
      2
      /
      5
       (
      40
      %)
    </span>
  </div>
  <div
    class="w-full bg-ink-900 rounded-full overflow-hidden border border-market-500/10 h-2"
  >
    <div
      class="h-full transition-all duration-500 rounded-full bg-gradient-to-r from-market-500 to-market-400"
      style="width: 40%;"
    />
  </div>
</div>
`;

exports[`static component snapshots PostJobForm default: PostJobForm 1`] = `
<div
  data-public-key="GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF"
  data-testid="post-job-form-stub"
/>
`;

exports[`static component snapshots ProfileChecklist complete: ProfileChecklist complete 1`] = `
<div
  class="card bg-gradient-to-br from-ink-800 to-ink-900 border-market-500/20 relative overflow-hidden"
>
  <div
    class="absolute top-0 right-0 w-32 h-32 bg-market-500/5 rounded-full blur-2xl pointer-events-none"
  />
  <div
    class="relative"
  >
    <div
      class="flex items-start justify-between mb-4"
    >
      <div>
        <h3
          class="font-display text-xl font-semibold text-amber-100 mb-1"
        >
          Profile Complete! 🎉
        </h3>
        <p
          class="text-sm text-amber-800"
        >
          You're all set to start using the platform
        </p>
      </div>
    </div>
    <div
      class="mb-6"
    >
      <div
        class="flex items-center justify-between text-sm mb-2"
      >
        <span
          class="text-amber-700 font-medium"
        >
          2
           of 
          2
           completed
        </span>
        <span
          class="text-market-400 font-mono font-semibold"
        >
          100
          %
        </span>
      </div>
      <div
        class="w-full bg-ink-900 rounded-full h-2 overflow-hidden border border-market-500/10"
      >
        <div
          class="h-full transition-all duration-500 rounded-full bg-gradient-to-r from-emerald-500 to-emerald-400"
          style="width: 100%;"
        />
      </div>
    </div>
    <div
      class="space-y-2"
    >
      <button
        class="w-full flex items-center gap-4 p-4 rounded-xl border transition-all text-left bg-emerald-500/5 border-emerald-500/20 cursor-default"
        disabled=""
      >
        <div
          class="flex-shrink-0 w-10 h-10 rounded-lg flex items-center justify-center transition-all bg-emerald-500/10 text-emerald-400"
        >
          <svg
            class="w-5 h-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 13l4 4L19 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="flex-1"
        >
          <p
            class="font-medium transition-colors text-emerald-400 line-through"
          >
            Connect wallet
          </p>
        </div>
      </button>
      <button
        class="w-full flex items-center gap-4 p-4 rounded-xl border transition-all text-left bg-emerald-500/5 border-emerald-500/20 cursor-default"
        disabled=""
      >
        <div
          class="flex-shrink-0 w-10 h-10 rounded-lg flex items-center justify-center transition-all bg-emerald-500/10 text-emerald-400"
        >
          <svg
            class="w-5 h-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 13l4 4L19 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="flex-1"
        >
          <p
            class="font-medium transition-colors text-emerald-400 line-through"
          >
            Add bio
          </p>
        </div>
      </button>
    </div>
    <div
      class="mt-6 p-4 rounded-xl bg-gradient-to-r from-emerald-500/10 to-market-500/10 border border-emerald-500/20"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          class="flex-shrink-0 w-12 h-12 rounded-full bg-emerald-500/20 flex items-center justify-center"
        >
          <svg
            class="w-6 h-6 text-emerald-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div>
          <p
            class="font-display font-semibold text-emerald-400 mb-0.5"
          >
            Profile Complete!
          </p>
          <p
            class="text-sm text-amber-800"
          >
            You're ready to start posting jobs or applying to projects
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`static component snapshots ProfileChecklist default: ProfileChecklist 1`] = `
<div
  class="card bg-gradient-to-br from-ink-800 to-ink-900 border-market-500/20 relative overflow-hidden"
>
  <div
    class="absolute top-0 right-0 w-32 h-32 bg-market-500/5 rounded-full blur-2xl pointer-events-none"
  />
  <div
    class="relative"
  >
    <div
      class="flex items-start justify-between mb-4"
    >
      <div>
        <h3
          class="font-display text-xl font-semibold text-amber-100 mb-1"
        >
          Complete Your Profile
        </h3>
        <p
          class="text-sm text-amber-800"
        >
          Finish these steps to get the most out of MarketPay
        </p>
      </div>
    </div>
    <div
      class="mb-6"
    >
      <div
        class="flex items-center justify-between text-sm mb-2"
      >
        <span
          class="text-amber-700 font-medium"
        >
          1
           of 
          2
           completed
        </span>
        <span
          class="text-market-400 font-mono font-semibold"
        >
          50
          %
        </span>
      </div>
      <div
        class="w-full bg-ink-900 rounded-full h-2 overflow-hidden border border-market-500/10"
      >
        <div
          class="h-full transition-all duration-500 rounded-full bg-gradient-to-r from-market-500 to-market-400"
          style="width: 50%;"
        />
      </div>
    </div>
    <div
      class="space-y-2"
    >
      <button
        class="w-full flex items-center gap-4 p-4 rounded-xl border transition-all text-left bg-ink-900/50 border-market-500/20 hover:border-market-500/40 hover:bg-ink-900/70 cursor-pointer"
      >
        <div
          class="flex-shrink-0 w-10 h-10 rounded-lg flex items-center justify-center transition-all bg-market-500/10 text-market-400"
        >
          🔑
        </div>
        <div
          class="flex-1"
        >
          <p
            class="font-medium transition-colors text-amber-100"
          >
            Connect wallet
          </p>
        </div>
        <svg
          class="w-5 h-5 text-amber-600 flex-shrink-0"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M9 5l7 7-7 7"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
      <button
        class="w-full flex items-center gap-4 p-4 rounded-xl border transition-all text-left bg-emerald-500/5 border-emerald-500/20 cursor-default"
        disabled=""
      >
        <div
          class="flex-shrink-0 w-10 h-10 rounded-lg flex items-center justify-center transition-all bg-emerald-500/10 text-emerald-400"
        >
          <svg
            class="w-5 h-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 13l4 4L19 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="flex-1"
        >
          <p
            class="font-medium transition-colors text-emerald-400 line-through"
          >
            Add bio
          </p>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`static component snapshots ProfileCompletenessWidget complete: ProfileCompletenessWidget complete 1`] = `
<div
  data-testid="profile-completeness-widget-stub"
/>
`;

exports[`static component snapshots ProfileCompletenessWidget in progress: ProfileCompletenessWidget in progress 1`] = `
<div
  data-testid="profile-completeness-widget-stub"
/>
`;

exports[`static component snapshots ProposalComparison default: ProposalComparison 1`] = `
<div
  data-testid="state-message-stub"
>
  No jobs posted yet
</div>
`;

exports[`static component snapshots RatingForm default: RatingForm 1`] = `
<div
  class="card border-market-500/20"
>
  <h3
    class="font-display text-base font-semibold text-amber-100 mb-1"
  >
    Leave a Rating
     for the freelancer
  </h3>
  <p
    class="text-amber-800 text-xs mb-4"
  >
    Rate your experience working together
  </p>
  <div
    aria-label="Star rating"
    class="flex items-center gap-1 mb-4"
    role="group"
  >
    <button
      aria-label="1 star"
      class="text-2xl transition-transform hover:scale-110 text-amber-900"
      type="button"
    >
      ★
    </button>
    <button
      aria-label="2 stars"
      class="text-2xl transition-transform hover:scale-110 text-amber-900"
      type="button"
    >
      ★
    </button>
    <button
      aria-label="3 stars"
      class="text-2xl transition-transform hover:scale-110 text-amber-900"
      type="button"
    >
      ★
    </button>
    <button
      aria-label="4 stars"
      class="text-2xl transition-transform hover:scale-110 text-amber-900"
      type="button"
    >
      ★
    </button>
    <button
      aria-label="5 stars"
      class="text-2xl transition-transform hover:scale-110 text-amber-900"
      type="button"
    >
      ★
    </button>
  </div>
  <textarea
    class="w-full bg-ink-800 border border-market-500/15 rounded-xl px-4 py-3 text-sm text-amber-100 placeholder-amber-900 focus:outline-none focus:border-market-500/40 resize-none mb-1"
    placeholder="Optional: leave a short review (max 200 characters)"
    rows="3"
  />
  <p
    class="text-xs text-amber-900 text-right mb-4"
  >
    0
    /200
  </p>
  <button
    class="btn-primary text-sm py-2 px-5 disabled:opacity-50"
    disabled=""
  >
    Submit Rating
  </button>
</div>
`;

exports[`static component snapshots RealtimeBidComparison empty: RealtimeBidComparison empty 1`] = `
<div
  class="space-y-6"
>
  <div
    class="flex items-center justify-between flex-wrap gap-2"
  >
    <div
      class="flex items-center gap-4 flex-wrap"
    >
      <h2
        class="font-display text-xl font-bold text-amber-100"
      >
        Applications (
        0
        )
      </h2>
      <span
        class="text-xs rounded-full border border-market-500/20 px-2 py-1 text-market-300"
      >
        Sealed phase
      </span>
    </div>
    <div
      class="flex items-center gap-2"
    />
  </div>
  <div
    class="border border-dashed border-market-500/20 rounded-xl p-8 text-center"
  >
    <p
      class="text-amber-800 text-sm"
    >
      No applications yet. Waiting for freelancers to apply…
    </p>
  </div>
  <div
    class="text-center py-2"
  >
    <p
      class="text-xs text-amber-800"
    >
      🟡 Connecting to live updates…
    </p>
  </div>
</div>
`;

exports[`static component snapshots RealtimeBidComparison with applications: RealtimeBidComparison populated 1`] = `
<div
  class="space-y-6"
>
  <div
    class="flex items-center justify-between flex-wrap gap-2"
  >
    <div
      class="flex items-center gap-4 flex-wrap"
    >
      <h2
        class="font-display text-xl font-bold text-amber-100"
      >
        Applications (
        1
        )
      </h2>
      <span
        class="text-xs rounded-full border border-market-500/20 px-2 py-1 text-market-300"
      >
        Sealed phase
      </span>
    </div>
    <div
      class="flex items-center gap-2"
    />
  </div>
  <div
    class="space-y-4"
  >
    <div
      class="card transition-all duration-500 opacity-100 scale-100  "
    >
      <div
        class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-3 mb-3"
      >
        <div
          class="flex flex-wrap items-center gap-2"
        >
          <a
            class="address-tag hover:border-market-500/40 transition-colors"
            href="https://stellar.expert/explorer/testnet/account/GBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB"
            rel="noopener noreferrer"
            target="_blank"
          >
            GBBBBB...BBBBBB
             ↗
          </a>
          <span
            class="inline-flex items-center rounded-full border px-3 py-1 text-xs font-semibold tracking-wide border-slate-400/20 bg-slate-400/10 text-slate-200 px-2 py-0.5"
          >
            Newcomer
          </span>
        </div>
        <div
          class="flex items-center gap-3 sm:flex-shrink-0"
        >
          <div
            class="text-left sm:text-right"
          >
            <div
              class="font-mono text-market-400 font-semibold text-sm"
            >
              Sealed commitment
            </div>
          </div>
          <span
            class="text-xs px-2.5 py-1 rounded-full border bg-market-500/10 text-market-400 border-market-500/20"
          >
            pending
          </span>
        </div>
      </div>
      <p
        class="text-amber-700/80 text-sm leading-relaxed mb-3"
      >
        I have five years of experience building on Stellar.
      </p>
      <div
        class="flex items-center justify-between"
      >
        <p
          class="text-xs text-amber-800"
        >
          Applied 
          8 months ago
        </p>
      </div>
    </div>
  </div>
  <div
    class="text-center py-2"
  >
    <p
      class="text-xs text-amber-800"
    >
      🟡 Connecting to live updates…
    </p>
  </div>
</div>
`;

exports[`static component snapshots SendPaymentForm default: SendPaymentForm 1`] = `
<div
  data-testid="send-payment-form-stub"
/>
`;

exports[`static component snapshots ShareJobModal default: ShareJobModal 1`] = `
<div
  class="fixed inset-0 z-50 bg-ink-900/90 backdrop-blur-sm flex items-center justify-center p-4"
  role="presentation"
>
  <div
    aria-label="Share job: Build a Soroban escrow contract for marketplace payouts"
    aria-modal="true"
    class="w-full max-w-md bg-ink-800 rounded-xl border border-market-500/20 shadow-xl"
    role="dialog"
  >
    <div
      class="flex items-center justify-between p-6 border-b border-market-500/10"
    >
      <h3
        class="font-display text-lg font-semibold text-amber-100"
      >
        Share Job
      </h3>
      <button
        aria-label="Close share job modal"
        class="text-amber-800 hover:text-amber-600 transition-colors"
        type="button"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18L18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-6 space-y-6"
    >
      <div>
        <h4
          class="font-display text-amber-100 font-medium mb-2"
        >
          Build a Soroban escrow contract for marketplace payouts
        </h4>
        <p
          class="text-amber-800 text-sm"
        >
          Smart Contracts
           • 
          XLM
           
          500.0000000
        </p>
        <p
          class="text-amber-800/80 text-xs mt-2 leading-relaxed"
        >
          <span
            aria-hidden="true"
            class="mr-1"
          >
            🪪
          </span>
          Shared on Discord, X, LinkedIn, Slack, or iMessage this link renders a rich preview card with the job title, budget, and category — generated automatically by
           
          <code
            class="font-mono text-[11px] text-amber-700"
          >
            /api/og/[jobId]
          </code>
          .
        </p>
      </div>
      <div
        class="space-y-4"
      >
        <div>
          <label
            class="block text-sm font-medium text-amber-200 mb-2"
            for="share-job-url"
          >
            Share Job URL
          </label>
          <div
            class="flex gap-2"
          >
            <input
              class="flex-1 px-3 py-2 bg-ink-900 border border-market-500/20 rounded-lg text-amber-100 text-sm"
              id="share-job-url"
              readonly=""
              type="text"
              value="http://localhost/jobs/job-1"
            />
            <button
              class="btn-secondary px-4 py-2 text-sm"
            >
              Copy
            </button>
          </div>
        </div>
        <div>
          <span
            class="block text-sm font-medium text-amber-200 mb-2"
          >
            Create Invite Link (Pre-filled Application)
          </span>
          <div
            class="space-y-3 mb-4"
          >
            <div>
              <label
                class="block text-xs text-amber-800 mb-1"
              >
                Suggested Bid Amount (
                XLM
                )
              </label>
              <input
                class="w-full px-3 py-2 bg-ink-900 border border-market-500/20 rounded-lg text-amber-100 text-sm"
                placeholder="e.g. 500"
                type="text"
                value=""
              />
            </div>
            <div>
              <label
                class="block text-xs text-amber-800 mb-1"
                for="personal-message-optional"
              >
                Personal Message (optional)
              </label>
              <textarea
                class="w-full px-3 py-2 bg-ink-900 border border-market-500/20 rounded-lg text-amber-100 text-sm resize-none"
                id="personal-message-optional"
                placeholder="Add a personal note for the freelancer..."
                rows="3"
              />
            </div>
          </div>
          <div
            class="flex gap-2"
          >
            <input
              class="flex-1 px-3 py-2 bg-ink-900 border border-market-500/20 rounded-lg text-amber-100 text-xs"
              readonly=""
              type="text"
              value="http://localhost/jobs/job-1?prefill=eyJqb2JJZCI6ImpvYi0xIn0%3D"
            />
            <button
              class="btn-secondary px-4 py-2 text-sm"
            >
              Copy
            </button>
            <button
              class="btn-secondary px-4 py-2 text-sm"
            >
              QR
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`static component snapshots Spinner default: Spinner default 1`] = `
<svg
  class="animate-spin w-4 h-4"
  fill="none"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    class="opacity-25"
    cx="12"
    cy="12"
    r="10"
    stroke="currentColor"
    stroke-width="4"
  />
  <path
    class="opacity-75"
    d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
    fill="currentColor"
  />
</svg>
`;

exports[`static component snapshots StateMessage empty state: StateMessage empty 1`] = `
<div
  data-testid="state-message-stub"
>
  No jobs found
</div>
`;

exports[`static component snapshots StateMessage error state: StateMessage error 1`] = `
<div
  data-testid="state-message-stub"
>
  Something went wrong
</div>
`;

exports[`static component snapshots Toast variant error: Toast error 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="relative flex items-start gap-3 w-full max-w-sm rounded-xl border border-white/[0.08] bg-[#111A14]/90 backdrop-blur-xl px-4 py-3 shadow-[0_8px_32px_rgba(0,0,0,0.5)] overflow-hidden transition-all duration-300 ease-[cubic-bezier(0.22,1,0.36,1)] opacity-100 translate-y-0 scale-100"
  role="alert"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 h-full w-[3px] rounded-l-xl bg-red-500"
  />
  <span
    class="mt-[1px] shrink-0 text-red-400"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
    >
      <circle
        cx="8"
        cy="8"
        r="7"
        stroke="currentColor"
        stroke-width="1.5"
      />
      <path
        d="M5.5 5.5L10.5 10.5M10.5 5.5L5.5 10.5"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="1.5"
      />
    </svg>
  </span>
  <p
    class="flex-1 text-[13px] leading-snug text-amber-100/90 pr-2"
  >
    error message
  </p>
  <button
    aria-label="Dismiss notification"
    class="shrink-0 text-amber-800/60 hover:text-amber-100 transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-white/30 rounded"
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="14"
      viewBox="0 0 14 14"
      width="14"
    >
      <path
        d="M3 3L11 11M11 3L3 11"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="1.5"
      />
    </svg>
  </button>
</div>
`;

exports[`static component snapshots Toast variant info: Toast info 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="relative flex items-start gap-3 w-full max-w-sm rounded-xl border border-white/[0.08] bg-[#111A14]/90 backdrop-blur-xl px-4 py-3 shadow-[0_8px_32px_rgba(0,0,0,0.5)] overflow-hidden transition-all duration-300 ease-[cubic-bezier(0.22,1,0.36,1)] opacity-100 translate-y-0 scale-100"
  role="alert"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 h-full w-[3px] rounded-l-xl bg-sky-500"
  />
  <span
    class="mt-[1px] shrink-0 text-sky-400"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
    >
      <circle
        cx="8"
        cy="8"
        r="7"
        stroke="currentColor"
        stroke-width="1.5"
      />
      <path
        d="M8 7V11M8 5.5V5"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="1.5"
      />
    </svg>
  </span>
  <p
    class="flex-1 text-[13px] leading-snug text-amber-100/90 pr-2"
  >
    info message
  </p>
  <button
    aria-label="Dismiss notification"
    class="shrink-0 text-amber-800/60 hover:text-amber-100 transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-white/30 rounded"
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="14"
      viewBox="0 0 14 14"
      width="14"
    >
      <path
        d="M3 3L11 11M11 3L3 11"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="1.5"
      />
    </svg>
  </button>
</div>
`;

exports[`static component snapshots Toast variant success: Toast success 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  class="relative flex items-start gap-3 w-full max-w-sm rounded-xl border border-white/[0.08] bg-[#111A14]/90 backdrop-blur-xl px-4 py-3 shadow-[0_8px_32px_rgba(0,0,0,0.5)] overflow-hidden transition-all duration-300 ease-[cubic-bezier(0.22,1,0.36,1)] opacity-100 translate-y-0 scale-100"
  role="alert"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 h-full w-[3px] rounded-l-xl bg-emerald-500"
  />
  <span
    class="mt-[1px] shrink-0 text-emerald-400"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
    >
      <circle
        cx="8"
        cy="8"
        r="7"
        stroke="currentColor"
        stroke-width="1.5"
      />
      <path
        d="M5 8.5L7 10.5L11 6"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
      />
    </svg>
  </span>
  <p
    class="flex-1 text-[13px] leading-snug text-amber-100/90 pr-2"
  >
    success message
  </p>
  <button
    aria-label="Dismiss notification"
    class="shrink-0 text-amber-800/60 hover:text-amber-100 transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-white/30 rounded"
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="14"
      viewBox="0 0 14 14"
      width="14"
    >
      <path
        d="M3 3L11 11M11 3L3 11"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="1.5"
      />
    </svg>
  </button>
</div>
`;

exports[`static component snapshots Tooltips with target: Tooltips 1`] = `
<div>
  <button
    class="onboarding-highlight"
    data-testid="tooltip-target"
    type="button"
  >
    Target
  </button>
  <div
    class="fixed z-50 w-80 animate-fade-in -translate-x-1/2"
    style="top: 10px; left: 0px;"
  >
    <div
      class="bg-gradient-to-br from-ink-800 to-ink-900 border border-market-500/30 rounded-xl shadow-2xl p-4"
    >
      <div
        class="absolute w-3 h-3 bg-ink-800 border-market-500/30 transform rotate-45"
      />
      <div
        class="relative"
      >
        <div
          class="flex items-start justify-between gap-3 mb-2"
        >
          <h4
            class="font-display font-semibold text-amber-100 text-sm"
          >
            Quick tip
          </h4>
          <button
            aria-label="Dismiss tooltip"
            class="text-amber-600 hover:text-amber-400 transition-colors flex-shrink-0"
            type="button"
          >
            <svg
              class="w-4 h-4"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <p
          class="text-xs text-amber-800 mb-3"
        >
          Use filters to narrow jobs.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`static component snapshots WalletConnect idle: WalletConnect idle 1`] = `
<div
  data-testid="wallet-connect-stub"
/>
`;

exports[`static component snapshots WelcomeModal open: WelcomeModal open 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center p-4 animate-fade-in"
>
  <button
    aria-label="Close dialog"
    class="absolute inset-0 bg-black/60 backdrop-blur-sm"
    type="button"
  />
  <div
    aria-labelledby="welcome-title"
    aria-modal="true"
    class="relative bg-gradient-to-br from-ink-800 to-ink-900 border border-market-500/20 rounded-2xl shadow-2xl max-w-2xl w-full p-8 animate-scale-in"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="absolute top-0 right-0 w-64 h-64 bg-market-500/5 rounded-full blur-3xl pointer-events-none"
    />
    <div
      class="absolute bottom-0 left-0 w-48 h-48 bg-amber-500/5 rounded-full blur-3xl pointer-events-none"
    />
    <div
      class="relative"
    >
      <div
        class="text-center mb-8"
      >
        <div
          class="inline-flex items-center justify-center w-20 h-20 rounded-full bg-market-500/10 border border-market-500/20 mb-6"
        >
          <svg
            class="w-10 h-10 text-market-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M13 10V3L4 14h7v7l9-11h-7z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <h2
          class="font-display text-3xl font-bold text-amber-100 mb-3"
          id="welcome-title"
        >
          Welcome to Stellar MarketPay! 🎉
        </h2>
        <p
          class="text-amber-700 text-lg"
        >
          Your decentralized freelance marketplace powered by Stellar
        </p>
      </div>
      <div
        class="space-y-4 mb-8"
      >
        <div
          class="flex items-start gap-4 p-4 rounded-xl bg-ink-900/50 border border-market-500/10"
        >
          <div
            class="flex-shrink-0 w-10 h-10 rounded-lg bg-market-500/10 flex items-center justify-center"
          >
            <svg
              class="w-5 h-5 text-market-400"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <div>
            <h3
              class="font-display font-semibold text-amber-100 mb-1"
            >
              Complete Your Profile
            </h3>
            <p
              class="text-sm text-amber-800"
            >
              Add your skills, bio, and portfolio to stand out to clients
            </p>
          </div>
        </div>
        <div
          class="flex items-start gap-4 p-4 rounded-xl bg-ink-900/50 border border-market-500/10"
        >
          <div
            class="flex-shrink-0 w-10 h-10 rounded-lg bg-market-500/10 flex items-center justify-center"
          >
            <svg
              class="w-5 h-5 text-market-400"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <div>
            <h3
              class="font-display font-semibold text-amber-100 mb-1"
            >
              Post or Find Jobs
            </h3>
            <p
              class="text-sm text-amber-800"
            >
              Hire talented freelancers or apply to exciting projects
            </p>
          </div>
        </div>
        <div
          class="flex items-start gap-4 p-4 rounded-xl bg-ink-900/50 border border-market-500/10"
        >
          <div
            class="flex-shrink-0 w-10 h-10 rounded-lg bg-market-500/10 flex items-center justify-center"
          >
            <svg
              class="w-5 h-5 text-market-400"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
          <div>
            <h3
              class="font-display font-semibold text-amber-100 mb-1"
            >
              Connect Your Wallet
            </h3>
            <p
              class="text-sm text-amber-800"
            >
              Secure payments with Stellar blockchain and smart contracts
            </p>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col sm:flex-row gap-3"
      >
        <button
          class="flex-1 btn-primary py-3 text-base font-semibold"
        >
          Get Started →
        </button>
        <button
          class="flex-1 btn-secondary py-3 text-base"
        >
          Dismiss
        </button>
      </div>
      <p
        class="text-center text-xs text-amber-800 mt-6"
      >
        You can restart this tour anytime from your profile settings
      </p>
    </div>
  </div>
</div>
`;

exports[`static component snapshots WithdrawToBankModal default: WithdrawToBankModal 1`] = `
<div
  data-testid="withdraw-to-bank-modal-stub"
/>
`;
